
syntax = "proto3";

package proto;
option go_package = "github.com/waas-app/WaaS/proto;proto";

import "google/protobuf/wrappers.proto";

service Server {
  rpc Info(InfoReq) returns (InfoRes) {}
}

message InfoReq {
}

message InfoRes {
  string public_key = 1;
  google.protobuf.StringValue host = 2;
  int32 port = 3;
  string host_vpn_ip = 4;
  bool is_admin = 5;
  string allowed_ips = 6;
  bool dns_enabled = 7;
  string dns_address = 8;
}